[project]
name = "idslab-langgraph-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "flask>=3.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "langgraph-api>=0.4.20",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
]
